@@ -1,180 +1,184 @@
-#!/bin/sh
+#!/bin/bash
 
-# Hadoop 3.4.1 Installation Script for Windows WSL
-# Author: Your Name
-# Version: 1.0
+# 🐘 Hadoop WSL Installer - Complete Setup Script
+# Robust Apache Hadoop 3.4.1 Installation for Windows WSL
+# Author: Stephen Baraik
+# Repository: https://github.com/stephenbaraik/hadoop-wsl-installer
 
-set -e
+set -euo pipefail
 
-# Colors for output
-RED='\033[0;31m'
-GREEN='\033[0;32m'
-YELLOW='\033[1;33m'
-BLUE='\033[0;34m'
-NC='\033[0m' # No Color
-
+# ============================================================================
 # Configuration
+# ============================================================================
 HADOOP_VERSION="3.4.1"
 HADOOP_HOME="/opt/hadoop"
-HADOOP_USER=$(whoami)
+JAVA_VERSION="11"
+SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
-# Determine Java home based on distribution and actual installation
-detect_java_home() {
-    # Try common Java paths one by one
-    if [ -d "/usr/lib/jvm/java-11-openjdk-amd64" ]; then
-        echo "/usr/lib/jvm/java-11-openjdk-amd64"
-    elif [ -d "/usr/lib/jvm/java-11-openjdk" ]; then
-        echo "/usr/lib/jvm/java-11-openjdk"
-    elif [ -d "/usr/lib/jvm/default-java" ]; then
-        echo "/usr/lib/jvm/default-java"
-    elif [ -d "/usr/lib/jvm/java-1.11.0-openjdk-amd64" ]; then
-        echo "/usr/lib/jvm/java-1.11.0-openjdk-amd64"
-    else
-        # If no predefined path works, try to find Java
-        if command -v java >/dev/null 2>&1; then
-            java -XshowSettings:properties -version 2>&1 | grep 'java.home' | awk '{print $3}' | head -1
-        else
-            echo "/usr/lib/jvm/java-11-openjdk-amd64"  # Default fallback
-        fi
-    fi
-}
+# Colors for beautiful output
+readonly RED='\033[0;31m'
+readonly GREEN='\033[0;32m'
+readonly YELLOW='\033[1;33m'
+readonly BLUE='\033[0;34m'
+readonly PURPLE='\033[0;35m'
+readonly CYAN='\033[0;36m'
+readonly WHITE='\033[1;37m'
+readonly NC='\033[0m' # No Color
 
-if command -v apk >/dev/null 2>&1; then
-    # Alpine Linux
-    JAVA_HOME="/usr/lib/jvm/java-11-openjdk"
-else
-    # Ubuntu/Debian - detect dynamically
-    JAVA_HOME=$(detect_java_home)
-fi
-
-# Helper function to handle sudo commands
-run_as_admin() {
-    if command -v sudo >/dev/null 2>&1 && [ "$(id -u)" != "0" ]; then
-        sudo "$@"
-    else
-        "$@"
-    fi
-}
-
-# Logging function
+# ============================================================================
+# Logging Functions
+# ============================================================================
 log() {
-    echo -e "${GREEN}[$(date +'%Y-%m-%d %H:%M:%S')] $1${NC}"
-}
-
-error() {
-    echo -e "${RED}[ERROR] $1${NC}" >&2
-    exit 1
-}
-
-warning() {
-    echo -e "${YELLOW}[WARNING] $1${NC}"
+    echo -e "${GREEN}[$(date +'%H:%M:%S')] ✅ $1${NC}"
 }
 
 info() {
-    echo -e "${BLUE}[INFO] $1${NC}"
+    echo -e "${BLUE}[$(date +'%H:%M:%S')] ℹ️  $1${NC}"
 }
 
-# Check if running on WSL
-check_wsl() {
-    if ! grep -q "microsoft\|WSL" /proc/version 2>/dev/null; then
-        error "This script is designed for Windows WSL environment only!"
-    fi
-    
-    # Check if we're in a Windows mount path and warn user
-    if echo "$(pwd)" | grep -q "^/mnt/"; then
-        warning "Running from Windows filesystem. For better performance, consider running from Linux filesystem (e.g., /home/$USER/)"
-    fi
-    
-    log "WSL environment detected ✓"
+warn() {
+    echo -e "${YELLOW}[$(date +'%H:%M:%S')] ⚠️  $1${NC}"
 }
 
-# Update system packages
+error() {
+    echo -e "${RED}[$(date +'%H:%M:%S')] ❌ $1${NC}" >&2
+    exit 1
+}
+
+step() {
+    echo -e "${PURPLE}[$(date +'%H:%M:%S')] 🚀 $1${NC}"
+}
+
+success() {
+    echo -e "${GREEN}[$(date +'%H:%M:%S')] 🎉 $1${NC}"
+}
+
+# ============================================================================
+# Header
+# ============================================================================
+show_header() {
+    clear
+    echo -e "${CYAN}"
+    echo "=============================================================================="
+    echo "🐘                    HADOOP WSL INSTALLER                              🐘"
+    echo "=============================================================================="
+    echo "   Apache Hadoop 3.4.1 Complete Installation for Windows WSL"
+    echo "   Includes: Java 11, SSH, HDFS, YARN, MapReduce & Web UIs"
+    echo "=============================================================================="
+    echo -e "${NC}"
+}
+
+# ============================================================================
+# System Checks
+# ============================================================================
+check_system() {
+    step "Performing system checks..."
+    
+    # Check WSL
+    if ! grep -qE "(microsoft|WSL)" /proc/version 2>/dev/null; then
+        error "This script requires Windows WSL environment!"
+    fi
+    
+    # Check if running as root
+    if [[ $EUID -eq 0 ]]; then
+        error "Please run this script as a regular user, not as root!"
+    fi
+    
+    # Check available space (need at least 5GB)
+    local available_space=$(df / | awk 'NR==2 {print $4}')
+    if [[ $available_space -lt 5242880 ]]; then  # 5GB in KB
+        warn "Low disk space detected. At least 5GB free space recommended."
+    fi
+    
+    # Check memory (recommend at least 4GB)
+    local total_mem=$(free -m | awk 'NR==2{print $2}')
+    if [[ $total_mem -lt 4096 ]]; then
+        warn "System has less than 4GB RAM. Hadoop may run slowly."
+    fi
+    
+    log "System checks completed"
+}
+
+# ============================================================================
+# Package Management
+# ============================================================================
 update_system() {
-    log "Updating system packages..."
-    # Check if we're on Alpine Linux or Ubuntu/Debian
-    if command -v apk >/dev/null 2>&1; then
-        # Alpine Linux
-        run_as_admin apk update && run_as_admin apk upgrade
-        run_as_admin apk add wget curl rsync openssh-server openssh-client vim net-tools openjdk11-jre-headless bash
-    elif command -v apt >/dev/null 2>&1; then
-        # Ubuntu/Debian
-        run_as_admin apt update && run_as_admin apt upgrade -y
-        run_as_admin apt install -y wget curl rsync openssh-server openssh-client vim net-tools openjdk-11-jre-headless
+    step "Updating system packages..."
+    
+    export DEBIAN_FRONTEND=noninteractive
+    
+    if command -v apt >/dev/null 2>&1; then
+        sudo apt update -qq
+        sudo apt upgrade -y -qq
+        sudo apt install -y -qq \
+            wget curl vim net-tools \
+            openssh-server openssh-client \
+            openjdk-11-jdk openjdk-11-jre \
+            rsync unzip tar gzip \
+            htop tree jq
     else
-        error "Unsupported Linux distribution. This script requires Alpine Linux or Ubuntu/Debian."
+        error "Unsupported Linux distribution. This script requires Ubuntu/Debian."
     fi
+    
+    log "System packages updated successfully"
 }
 
-# Setup Java
+# ============================================================================
+# Java Setup
+# ============================================================================
 setup_java() {
-    log "Setting up Java 11..."
+    step "Setting up Java ${JAVA_VERSION}..."
     
-    # Check if we're on Alpine Linux or Ubuntu/Debian
-    if command -v apk >/dev/null 2>&1; then
-        # Alpine Linux - Java should already be installed by update_system
-        if ! command -v java >/dev/null 2>&1; then
-            error "Java installation failed on Alpine Linux!"
-        fi
-    elif command -v apt >/dev/null 2>&1; then
-        # Ubuntu/Debian - Install OpenJDK 11
-        log "Installing OpenJDK 11..."
-        run_as_admin apt install -y openjdk-11-jdk openjdk-11-jre
-        
-        # Configure alternatives (ensure Java 11 is default)
-        run_as_admin update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-11-openjdk-amd64/bin/java 1 2>/dev/null || true
-        run_as_admin update-alternatives --install /usr/bin/javac javac /usr/lib/jvm/java-11-openjdk-amd64/bin/javac 1 2>/dev/null || true
+    # Set JAVA_HOME
+    if [[ -d "/usr/lib/jvm/java-11-openjdk-amd64" ]]; then
+        export JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64"
+    elif [[ -d "/usr/lib/jvm/java-11-openjdk" ]]; then
+        export JAVA_HOME="/usr/lib/jvm/java-11-openjdk"
     else
-        error "Unsupported Linux distribution for Java installation"
+        export JAVA_HOME="/usr/lib/jvm/default-java"
     fi
+    
+    # Configure alternatives
+    sudo update-alternatives --install /usr/bin/java java "${JAVA_HOME}/bin/java" 1 >/dev/null 2>&1 || true
+    sudo update-alternatives --install /usr/bin/javac javac "${JAVA_HOME}/bin/javac" 1 >/dev/null 2>&1 || true
     
     # Verify Java installation
-    if ! java -version 2>&1 | grep -q "openjdk version \"11"; then
-        error "Java 11 installation failed!"
+    local java_version=$(java -version 2>&1 | head -n1 | cut -d'"' -f2)
+    if [[ ! $java_version =~ ^11\. ]]; then
+        error "Java 11 installation failed. Found version: $java_version"
     fi
     
-    java_version=$(java -version 2>&1 | head -n1)
-    info "Installed: $java_version"
-    log "Java 11 installed successfully ✓"
+    info "Java Version: $java_version"
+    info "JAVA_HOME: $JAVA_HOME"
+    log "Java setup completed"
 }
 
-# Setup SSH
+# ============================================================================
+# SSH Configuration
+# ============================================================================
 setup_ssh() {
-    log "Setting up SSH for passwordless authentication..."
-    
-    # Install SSH server and client (already done in update_system, but ensure it's configured)
-    log "Configuring SSH server..."
+    step "Setting up SSH for passwordless authentication..."
     
     # Start SSH service
-    run_as_admin service ssh start 2>/dev/null || true
+    sudo service ssh start >/dev/null 2>&1 || true
+    sudo systemctl enable ssh >/dev/null 2>&1 || true
     
-    # Enable SSH service to start automatically
-    run_as_admin systemctl enable ssh 2>/dev/null || warning "systemctl not available in WSL, SSH service configured manually"
-    
-    # Generate SSH key pair if not exists
-    log "Setting up SSH keys for passwordless authentication..."
-    
-    # Create .ssh directory if it doesn't exist
+    # Create .ssh directory
     mkdir -p ~/.ssh
     chmod 700 ~/.ssh
     
-    # Generate SSH key pair if it doesn't exist
-    if [ ! -f ~/.ssh/id_rsa ]; then
+    # Generate SSH keys if they don't exist
+    if [[ ! -f ~/.ssh/id_rsa ]]; then
         info "Generating SSH key pair..."
         ssh-keygen -t rsa -b 4096 -f ~/.ssh/id_rsa -N "" -q
-        info "SSH key pair generated ✓"
-    else
-        info "SSH key pair already exists"
     fi
     
-    # Add public key to authorized_keys for passwordless localhost access
-    if [ -f ~/.ssh/id_rsa.pub ]; then
-        cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys 2>/dev/null || true
-        chmod 600 ~/.ssh/authorized_keys
-        info "SSH key added to authorized_keys ✓"
-    fi
+    # Add public key to authorized_keys
+    cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys 2>/dev/null || true
+    chmod 600 ~/.ssh/authorized_keys
     
-    # Configure SSH client for localhost connections
-    cat > ~/.ssh/config << EOF
+    # Create SSH config
+    cat > ~/.ssh/config << 'EOF'
 Host localhost
     StrictHostKeyChecking no
     UserKnownHostsFile /dev/null
@@ -187,156 +191,291 @@ Host 0.0.0.0
 EOF
     chmod 600 ~/.ssh/config
     
-    # Test SSH connection
-    info "Testing SSH connection to localhost..."
-    if ssh -o ConnectTimeout=10 localhost 'echo "SSH connection successful"' 2>/dev/null; then
-        log "SSH passwordless authentication configured successfully ✓"
-    else
-        warning "SSH connection test failed, but keys are configured. This is normal if SSH service isn't fully started yet."
-    fi
+    log "SSH passwordless authentication configured"
 }
 
-# Download and install Hadoop
-install_hadoop() {
-    log "Downloading and installing Hadoop ${HADOOP_VERSION}..."
+# ============================================================================
+# Hadoop Download
+# ============================================================================
+download_hadoop() {
+    step "Downloading Hadoop ${HADOOP_VERSION}..."
     
-    # Check if Hadoop is already installed
-    if [ -d "${HADOOP_HOME}" ] && [ -f "${HADOOP_HOME}/bin/hadoop" ]; then
-        warning "Hadoop appears to be already installed at ${HADOOP_HOME}"
-        read -p "Do you want to reinstall? This will remove the existing installation. (y/N): " -n 1 -r
-        echo
-        if ! echo "$REPLY" | grep -Eq "^[Yy]$"; then
-            info "Skipping Hadoop installation"
-            return 0
-        fi
-        info "Proceeding with reinstallation..."
-        run_as_admin rm -rf ${HADOOP_HOME}
+    local hadoop_archive="hadoop-${HADOOP_VERSION}.tar.gz"
+    
+    # Skip download if already exists and is valid
+    if [[ -f "$hadoop_archive" ]] && tar -tzf "$hadoop_archive" >/dev/null 2>&1; then
+        info "Hadoop archive already exists and is valid"
+        return 0
     fi
     
-    # Download Hadoop if not already present
-    if [ ! -f "hadoop-${HADOOP_VERSION}.tar.gz" ]; then
-        info "Downloading Hadoop ${HADOOP_VERSION}..."
-        
-        # Try multiple mirrors for reliable download
-        local mirrors=(
-            "https://archive.apache.org/dist/hadoop/common/hadoop-${HADOOP_VERSION}/hadoop-${HADOOP_VERSION}.tar.gz"
-            "https://dlcdn.apache.org/hadoop/common/hadoop-${HADOOP_VERSION}/hadoop-${HADOOP_VERSION}.tar.gz"
-            "https://downloads.apache.org/hadoop/common/hadoop-${HADOOP_VERSION}/hadoop-${HADOOP_VERSION}.tar.gz"
-        )
-        
-        local download_success=false
-        for url in "${mirrors[@]}"; do
-            info "Trying mirror: $url"
-            if wget --progress=bar --timeout=30 --tries=3 -O "hadoop-${HADOOP_VERSION}.tar.gz" "$url"; then
-                download_success=true
-                info "Download successful from: $url"
+    # Remove any corrupted archive
+    rm -f "$hadoop_archive"
+    
+    # Download mirrors in priority order
+    local mirrors=(
+        "https://archive.apache.org/dist/hadoop/common/hadoop-${HADOOP_VERSION}/${hadoop_archive}"
+        "https://dlcdn.apache.org/hadoop/common/hadoop-${HADOOP_VERSION}/${hadoop_archive}"
+        "https://downloads.apache.org/hadoop/common/hadoop-${HADOOP_VERSION}/${hadoop_archive}"
+    )
+    
+    local downloaded=false
+    for mirror in "${mirrors[@]}"; do
+        info "Attempting download from: $(echo $mirror | cut -d'/' -f3)"
+        if wget --progress=bar:force --timeout=30 --tries=3 -O "$hadoop_archive" "$mirror" 2>/dev/null; then
+            # Verify download integrity
+            if tar -tzf "$hadoop_archive" >/dev/null 2>&1; then
+                downloaded=true
                 break
             else
-                warning "Failed to download from: $url"
-                rm -f "hadoop-${HADOOP_VERSION}.tar.gz" 2>/dev/null || true
+                warn "Downloaded file appears corrupted, trying next mirror..."
+                rm -f "$hadoop_archive"
             fi
-        done
-        
-        if [ "$download_success" = false ]; then
-            error "Failed to download Hadoop from all mirrors. Please check your internet connection."
-            exit 1
         fi
-    else
-        info "Hadoop archive already exists, skipping download"
+    done
+    
+    if [[ "$downloaded" != true ]]; then
+        error "Failed to download Hadoop from all mirrors. Please check your internet connection."
     fi
     
-    # Verify download
-    if [ ! -f "hadoop-${HADOOP_VERSION}.tar.gz" ]; then
-        error "Hadoop archive not found after download!"
-        exit 1
+    log "Hadoop ${HADOOP_VERSION} downloaded successfully"
+}
+
+# ============================================================================
+# Hadoop Installation
+# ============================================================================
+install_hadoop() {
+    step "Installing Hadoop to ${HADOOP_HOME}..."
+    
+    local hadoop_archive="hadoop-${HADOOP_VERSION}.tar.gz"
+    
+    # Clean existing installation
+    if [[ -d "$HADOOP_HOME" ]]; then
+        warn "Removing existing Hadoop installation..."
+        sudo rm -rf "$HADOOP_HOME"
     fi
     
     # Extract Hadoop
-    info "Extracting Hadoop..."
-    if ! tar -xzf hadoop-${HADOOP_VERSION}.tar.gz; then
-        error "Failed to extract Hadoop archive. File may be corrupted."
-        rm -f "hadoop-${HADOOP_VERSION}.tar.gz"
-        exit 1
-    fi
+    info "Extracting Hadoop archive..."
+    tar -xzf "$hadoop_archive"
     
-    # Create Hadoop directory and move extracted files
-    info "Installing Hadoop to ${HADOOP_HOME}..."
-    run_as_admin mkdir -p ${HADOOP_HOME}
-    run_as_admin cp -r hadoop-${HADOOP_VERSION}/* ${HADOOP_HOME}/
-    rm -rf hadoop-${HADOOP_VERSION}
+    # Move to final location
+    sudo mkdir -p "$HADOOP_HOME"
+    sudo cp -r "hadoop-${HADOOP_VERSION}"/* "$HADOOP_HOME"/
+    sudo chown -R "$(whoami):$(whoami)" "$HADOOP_HOME"
     
-    # Set ownership
-    run_as_admin chown -R ${HADOOP_USER}:${HADOOP_USER} ${HADOOP_HOME}
+    # Clean up
+    rm -rf "hadoop-${HADOOP_VERSION}" "$hadoop_archive"
     
-    log "Hadoop extracted to ${HADOOP_HOME} ✓"
+    log "Hadoop installed to ${HADOOP_HOME}"
 }
 
-# Configure Hadoop
+# ============================================================================
+# Hadoop Configuration
+# ============================================================================
 configure_hadoop() {
-    log "Configuring Hadoop..."
+    step "Configuring Hadoop..."
     
-    # Copy configuration files
-    cp config/core-site.xml ${HADOOP_HOME}/etc/hadoop/
-    cp config/hdfs-site.xml ${HADOOP_HOME}/etc/hadoop/
-    cp config/mapred-site.xml ${HADOOP_HOME}/etc/hadoop/
-    cp config/yarn-site.xml ${HADOOP_HOME}/etc/hadoop/
-    cp config/hadoop-env.sh ${HADOOP_HOME}/etc/hadoop/
-    
-    # Fix line endings in all Hadoop configuration files
-    fix_hadoop_line_endings
-    
-    # Fix deprecated JVM options in existing Hadoop installation for Java 11+ compatibility
-    info "Fixing deprecated JVM options for Java 11+ compatibility..."
-    if [ -f "${HADOOP_HOME}/etc/hadoop/hadoop-env.sh" ]; then
-        # Create backup
-        cp "${HADOOP_HOME}/etc/hadoop/hadoop-env.sh" "${HADOOP_HOME}/etc/hadoop/hadoop-env.sh.backup" 2>/dev/null || true
-        
-        # Remove deprecated options that cause Java 11+ errors
-        sed -i 's/-XX:+PrintGCDetails//g' ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-        sed -i 's/-XX:+PrintGCTimeStamps//g' ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-        sed -i 's/-Xloggc:/-Xlog:gc*:/g' ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-        
-        # Add Java 11+ compatible options
-        if ! grep -q "HADOOP_OPTS.*add-opens" ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh; then
-            echo "" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-            echo "# Java 11+ compatibility options" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-            echo "export HADOOP_OPTS=\"\$HADOOP_OPTS --add-opens java.base/java.lang=ALL-UNNAMED\"" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-            echo "export HADOOP_OPTS=\"\$HADOOP_OPTS --add-opens java.base/java.util=ALL-UNNAMED\"" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-            echo "export HADOOP_OPTS=\"\$HADOOP_OPTS --add-opens java.base/java.util.concurrent=ALL-UNNAMED\"" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-            echo "export HADOOP_OPTS=\"\$HADOOP_OPTS --add-opens java.base/java.net=ALL-UNNAMED\"" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-            echo "export HADOOP_OPTS=\"\$HADOOP_OPTS --add-opens java.base/java.io=ALL-UNNAMED\"" >> ${HADOOP_HOME}/etc/hadoop/hadoop-env.sh
-        fi
-        
-        info "Java 11+ compatibility options added ✓"
-    fi
+    # Create configuration directory
+    local config_dir="${HADOOP_HOME}/etc/hadoop"
     
     # Create data directories
-    mkdir -p ${HADOOP_HOME}/data/namenode
-    mkdir -p ${HADOOP_HOME}/data/datanode
-    mkdir -p ${HADOOP_HOME}/logs
+    mkdir -p "${HADOOP_HOME}/data/namenode"
+    mkdir -p "${HADOOP_HOME}/data/datanode"
+    mkdir -p "${HADOOP_HOME}/logs"
     
-    log "Hadoop configuration completed ✓"
+    # Copy configurations from our config directory
+    if [[ -d "${SCRIPT_DIR}/config" ]]; then
+        info "Using custom configuration files..."
+        cp "${SCRIPT_DIR}/config"/*.xml "${config_dir}/"
+        cp "${SCRIPT_DIR}/config/hadoop-env.sh" "${config_dir}/"
+    else
+        info "Creating default configuration files..."
+        
+        # Configure core-site.xml
+        cat > "${config_dir}/core-site.xml" << 'EOF'
+<?xml version="1.0" encoding="UTF-8"?>
+<configuration>
+    <property>
+        <name>fs.defaultFS</name>
+        <value>hdfs://localhost:9000</value>
+        <description>The default file system URI</description>
+    </property>
+    <property>
+        <name>hadoop.tmp.dir</name>
+        <value>/opt/hadoop/data/tmp</value>
+        <description>Temporary directory for Hadoop</description>
+    </property>
+    <property>
+        <name>hadoop.http.staticuser.user</name>
+        <value>hadoop</value>
+        <description>Web UI user</description>
+    </property>
+</configuration>
+EOF
+        
+        # Configure hdfs-site.xml
+        cat > "${config_dir}/hdfs-site.xml" << 'EOF'
+<?xml version="1.0" encoding="UTF-8"?>
+<configuration>
+    <property>
+        <name>dfs.replication</name>
+        <value>1</value>
+        <description>Default block replication</description>
+    </property>
+    <property>
+        <name>dfs.namenode.name.dir</name>
+        <value>/opt/hadoop/data/namenode</value>
+        <description>NameNode directory for namespace and transaction logs</description>
+    </property>
+    <property>
+        <name>dfs.datanode.data.dir</name>
+        <value>/opt/hadoop/data/datanode</value>
+        <description>DataNode directory</description>
+    </property>
+    <property>
+        <name>dfs.namenode.http-address</name>
+        <value>0.0.0.0:9870</value>
+        <description>NameNode Web UI address</description>
+    </property>
+    <property>
+        <name>dfs.datanode.http.address</name>
+        <value>0.0.0.0:9864</value>
+        <description>DataNode Web UI address</description>
+    </property>
+    <property>
+        <name>dfs.webhdfs.enabled</name>
+        <value>true</value>
+        <description>Enable WebHDFS</description>
+    </property>
+</configuration>
+EOF
+        
+        # Configure mapred-site.xml
+        cat > "${config_dir}/mapred-site.xml" << 'EOF'
+<?xml version="1.0" encoding="UTF-8"?>
+<configuration>
+    <property>
+        <name>mapreduce.framework.name</name>
+        <value>yarn</value>
+        <description>MapReduce framework name</description>
+    </property>
+    <property>
+        <name>mapreduce.application.classpath</name>
+        <value>$HADOOP_MAPRED_HOME/share/hadoop/mapreduce/*:$HADOOP_MAPRED_HOME/share/hadoop/mapreduce/lib/*</value>
+        <description>MapReduce application classpath</description>
+    </property>
+    <property>
+        <name>mapreduce.jobhistory.address</name>
+        <value>0.0.0.0:10020</value>
+        <description>JobHistory Server address</description>
+    </property>
+    <property>
+        <name>mapreduce.jobhistory.webapp.address</name>
+        <value>0.0.0.0:19888</value>
+        <description>JobHistory Server Web UI address</description>
+    </property>
+</configuration>
+EOF
+        
+        # Configure yarn-site.xml
+        cat > "${config_dir}/yarn-site.xml" << 'EOF'
+<?xml version="1.0" encoding="UTF-8"?>
+<configuration>
+    <property>
+        <name>yarn.nodemanager.aux-services</name>
+        <value>mapreduce_shuffle</value>
+        <description>Auxiliary services for NodeManager</description>
+    </property>
+    <property>
+        <name>yarn.nodemanager.aux-services.mapreduce_shuffle.class</name>
+        <value>org.apache.hadoop.mapred.ShuffleHandler</value>
+        <description>Shuffle service class</description>
+    </property>
+    <property>
+        <name>yarn.resourcemanager.hostname</name>
+        <value>localhost</value>
+        <description>ResourceManager hostname</description>
+    </property>
+    <property>
+        <name>yarn.resourcemanager.webapp.address</name>
+        <value>0.0.0.0:8088</value>
+        <description>ResourceManager Web UI address</description>
+    </property>
+    <property>
+        <name>yarn.nodemanager.webapp.address</name>
+        <value>0.0.0.0:8042</value>
+        <description>NodeManager Web UI address</description>
+    </property>
+    <property>
+        <name>yarn.nodemanager.resource.memory-mb</name>
+        <value>2048</value>
+        <description>Amount of physical memory for containers</description>
+    </property>
+    <property>
+        <name>yarn.scheduler.maximum-allocation-mb</name>
+        <value>2048</value>
+        <description>Maximum memory allocation for containers</description>
+    </property>
+    <property>
+        <name>yarn.nodemanager.vmem-check-enabled</name>
+        <value>false</value>
+        <description>Disable virtual memory checking</description>
+    </property>
+</configuration>
+EOF
+        
+        # Configure hadoop-env.sh with Java 11+ compatibility
+        cat > "${config_dir}/hadoop-env.sh" << EOF
+#!/bin/bash
+
+# Java configuration
+export JAVA_HOME=${JAVA_HOME}
+
+# Hadoop configuration
+export HADOOP_CONF_DIR=\${HADOOP_HOME}/etc/hadoop
+export HADOOP_LOG_DIR=\${HADOOP_HOME}/logs
+
+# Java 11+ compatibility options
+export HADOOP_OPTS="\$HADOOP_OPTS --add-opens java.base/java.lang=ALL-UNNAMED"
+export HADOOP_OPTS="\$HADOOP_OPTS --add-opens java.base/java.util=ALL-UNNAMED"
+export HADOOP_OPTS="\$HADOOP_OPTS --add-opens java.base/java.util.concurrent=ALL-UNNAMED"
+export HADOOP_OPTS="\$HADOOP_OPTS --add-opens java.base/java.net=ALL-UNNAMED"
+export HADOOP_OPTS="\$HADOOP_OPTS --add-opens java.base/java.io=ALL-UNNAMED"
+
+# WSL-specific optimizations
+export HADOOP_OPTS="\$HADOOP_OPTS -Djava.net.preferIPv4Stack=true"
+export HADOOP_OPTS="\$HADOOP_OPTS -Dsun.net.useExclusiveBind=false"
+
+# Memory settings for small environments
+export HADOOP_HEAPSIZE=1024
+export YARN_HEAPSIZE=1024
+EOF
+    fi
+    
+    # Make scripts executable
+    chmod +x "${config_dir}/hadoop-env.sh"
+    find "${HADOOP_HOME}/bin" -name "*.sh" -exec chmod +x {} \;
+    find "${HADOOP_HOME}/sbin" -name "*.sh" -exec chmod +x {} \;
+    
+    log "Hadoop configuration completed"
 }
 
-# Setup environment variables
+# ============================================================================
+# Environment Setup
+# ============================================================================
 setup_environment() {
-    log "Setting up environment variables..."
+    step "Setting up environment variables..."
     
-    # Create backup of bashrc if it doesn't exist
-    if [ ! -f ~/.bashrc.backup ] && [ -f ~/.bashrc ]; then
-        cp ~/.bashrc ~/.bashrc.backup
-        info "Created backup of .bashrc"
+    # Remove existing Hadoop variables from bashrc
+    if [[ -f ~/.bashrc ]]; then
+        # Create backup
+        cp ~/.bashrc ~/.bashrc.backup.$(date +%Y%m%d_%H%M%S)
+        
+        # Remove old Hadoop variables
+        sed -i '/# Hadoop Environment Variables/,/# End Hadoop Environment Variables/d' ~/.bashrc
     fi
     
-    # Remove old Hadoop environment variables if they exist
-    if grep -q "HADOOP_HOME" ~/.bashrc; then
-        # Create temporary file without Hadoop variables
-        grep -v "HADOOP_HOME\|HADOOP_CONF_DIR\|HADOOP_MAPRED_HOME\|HADOOP_COMMON_HOME\|HADOOP_HDFS_HOME\|YARN_HOME\|HADOOP_OPTS\|# Hadoop Environment Variables\|# WSL-specific optimizations\|# --- End Hadoop Environment Variables ---" ~/.bashrc > ~/.bashrc.temp
-        mv ~/.bashrc.temp ~/.bashrc
-        info "Removed old Hadoop environment variables from ~/.bashrc"
-    fi
-    
-    # Add current Hadoop environment variables
+    # Add new environment variables
     cat >> ~/.bashrc << EOF
 
 # Hadoop Environment Variables (Added by hadoop-wsl-installer)
@@ -349,16 +488,16 @@ export HADOOP_HDFS_HOME=\$HADOOP_HOME
 export YARN_HOME=\$HADOOP_HOME
 export PATH=\$PATH:\$HADOOP_HOME/bin:\$HADOOP_HOME/sbin
 
-# WSL-specific optimizations
-export HADOOP_OPTS="\$HADOOP_OPTS -Djava.net.preferIPv4Stack=true"
-export HADOOP_OPTS="\$HADOOP_OPTS -Djava.security.krb5.realm=OX.AC.UK"
-export HADOOP_OPTS="\$HADOOP_OPTS -Djava.security.krb5.kdc=kdc0.ox.ac.uk:kdc1.ox.ac.uk"
-# --- End Hadoop Environment Variables ---
+# Hadoop aliases for convenience
+alias hstart='\$HADOOP_HOME/sbin/start-all.sh'
+alias hstop='\$HADOOP_HOME/sbin/stop-all.sh'
+alias hstatus='jps'
+alias hdfs-format='\$HADOOP_HOME/bin/hdfs namenode -format -force'
+
+# End Hadoop Environment Variables
 EOF
-    info "Added Hadoop environment variables to ~/.bashrc"
     
-    # Source the bashrc for current session
-    export JAVA_HOME=${JAVA_HOME}
+    # Export variables for current session
     export HADOOP_HOME=${HADOOP_HOME}
     export HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
     export HADOOP_MAPRED_HOME=$HADOOP_HOME
@@ -367,301 +506,276 @@ EOF
     export YARN_HOME=$HADOOP_HOME
     export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
     
-    log "Environment variables configured ✓"
-    info "Run 'source ~/.bashrc' or restart terminal to load environment variables"
+    log "Environment variables configured"
 }
 
-# Fix line endings in Hadoop configuration files
-fix_hadoop_line_endings() {
-    log "Fixing line endings for WSL compatibility..."
-    
-    # Fix line endings in current directory scripts
-    info "Fixing main scripts..."
-    find "$(pwd)" -maxdepth 1 -name "*.sh" -type f -exec sed -i 's/\r$//' {} \; 2>/dev/null || true
-    
-    # Fix scripts in subdirectories
-    info "Fixing scripts in subdirectories..."
-    find "$(pwd)/scripts" -name "*.sh" -type f -exec sed -i 's/\r$//' {} \; 2>/dev/null || true
-    find "$(pwd)/config" -name "*.sh" -type f -exec sed -i 's/\r$//' {} \; 2>/dev/null || true
-    
-    # Make all scripts executable
-    info "Making scripts executable..."
-    find "$(pwd)" -name "*.sh" -type f -exec chmod +x {} \; 2>/dev/null || true
-    
-    # Fix Hadoop installation files if they exist
-    if [ -d "${HADOOP_HOME}" ]; then
-        info "Fixing Hadoop configuration files..."
-        find "${HADOOP_HOME}" -name "*.sh" -type f -exec sed -i 's/\r$//' {} \; 2>/dev/null || true
-        find "${HADOOP_HOME}" -name "*.xml" -type f -exec sed -i 's/\r$//' {} \; 2>/dev/null || true
-        find "${HADOOP_HOME}" -name "*.properties" -type f -exec sed -i 's/\r$//' {} \; 2>/dev/null || true
-        
-        # Make Hadoop scripts executable
-        find "${HADOOP_HOME}/bin" -name "*.sh" -type f -exec chmod +x {} \; 2>/dev/null || true
-        find "${HADOOP_HOME}/sbin" -name "*.sh" -type f -exec chmod +x {} \; 2>/dev/null || true
-    fi
-    
-    log "Line endings fixed and scripts made executable ✓"
-}
-
-# Format HDFS
+# ============================================================================
+# HDFS Formatting
+# ============================================================================
 format_hdfs() {
-    log "Formatting HDFS NameNode..."
+    step "Formatting HDFS filesystem..."
     
-    # Clean any existing data directories to prevent cluster ID conflicts
-    info "Cleaning existing HDFS data directories..."
-    run_as_admin rm -rf ${HADOOP_HOME}/data/tmp/dfs/name/* 2>/dev/null || true
-    run_as_admin rm -rf ${HADOOP_HOME}/data/tmp/dfs/data/* 2>/dev/null || true
-    run_as_admin rm -rf ${HADOOP_HOME}/logs/* 2>/dev/null || true
+    # Clean any existing data
+    rm -rf "${HADOOP_HOME}/data/namenode"/* 2>/dev/null || true
+    rm -rf "${HADOOP_HOME}/data/datanode"/* 2>/dev/null || true
+    rm -rf "${HADOOP_HOME}/logs"/* 2>/dev/null || true
     
-    # Ensure proper ownership of data directories
-    run_as_admin mkdir -p ${HADOOP_HOME}/data/tmp/dfs/name
-    run_as_admin mkdir -p ${HADOOP_HOME}/data/tmp/dfs/data
-    run_as_admin mkdir -p ${HADOOP_HOME}/logs
-    run_as_admin chown -R ${HADOOP_USER}:${HADOOP_USER} ${HADOOP_HOME}/data
-    run_as_admin chown -R ${HADOOP_USER}:${HADOOP_USER} ${HADOOP_HOME}/logs
+    # Create directories
+    mkdir -p "${HADOOP_HOME}/data/namenode"
+    mkdir -p "${HADOOP_HOME}/data/datanode"
+    mkdir -p "${HADOOP_HOME}/data/tmp"
+    mkdir -p "${HADOOP_HOME}/logs"
     
-    cd ${HADOOP_HOME}
-    if ./bin/hdfs namenode -format -force; then
-        log "HDFS NameNode formatted successfully ✓"
+    # Format namenode
+    info "Formatting NameNode..."
+    cd "$HADOOP_HOME"
+    if ./bin/hdfs namenode -format -force -nonInteractive 2>/dev/null; then
+        log "HDFS formatted successfully"
     else
-        error "HDFS formatting failed!"
-        exit 1
+        error "HDFS formatting failed"
     fi
 }
 
-# Start Hadoop services
-start_hadoop_services() {
-    log "Starting Hadoop services..."
-    
-    # Ensure we're in the right environment
-    if [ -z "$HADOOP_HOME" ] || [ ! -d "$HADOOP_HOME" ]; then
-        error "HADOOP_HOME not set or Hadoop not installed"
-        return 1
-    fi
+# ============================================================================
+# Service Management
+# ============================================================================
+start_services() {
+    step "Starting Hadoop services..."
     
     cd "$HADOOP_HOME"
-    
-    # Stop any existing services first
-    info "Stopping any existing Hadoop services..."
-    ./sbin/stop-dfs.sh 2>/dev/null || true
-    ./sbin/stop-yarn.sh 2>/dev/null || true
-    
-    # Wait a moment for services to stop
-    sleep 3
     
     # Start HDFS
     info "Starting HDFS services..."
     ./sbin/start-dfs.sh
     
-    # Wait for HDFS to start
     sleep 5
     
     # Start YARN
     info "Starting YARN services..."
     ./sbin/start-yarn.sh
     
-    # Wait for YARN to start
     sleep 5
     
-    # Verify services are running
-    info "Verifying Hadoop services..."
-    if command -v jps >/dev/null 2>&1; then
-        sleep 3
-        local running_services=$(jps | grep -E "(NameNode|DataNode|ResourceManager|NodeManager)" | wc -l)
-        if [ "$running_services" -ge 4 ]; then
-            log "All major Hadoop services started successfully ✓"
-            info "Running services:"
-            jps | grep -E "(NameNode|DataNode|ResourceManager|NodeManager|SecondaryNameNode)"
-        else
-            warning "Not all services started. Current services:"
-            jps | grep -E "(NameNode|DataNode|ResourceManager|NodeManager|SecondaryNameNode)" || echo "No Hadoop services found"
-        fi
-    else
-        warning "jps command not available, cannot verify service status"
-    fi
+    # Start JobHistory Server
+    info "Starting JobHistory Server..."
+    ./bin/mapred --daemon start historyserver
     
-    return 0
+    sleep 3
+    
+    # Verify services
+    info "Verifying services..."
+    local running_services=$(jps | grep -E "(NameNode|DataNode|ResourceManager|NodeManager|JobHistoryServer)" | wc -l)
+    
+    if [[ $running_services -ge 5 ]]; then
+        success "All Hadoop services started successfully!"
+        echo
+        info "Running services:"
+        jps | grep -E "(NameNode|DataNode|ResourceManager|NodeManager|JobHistoryServer|SecondaryNameNode)"
+    else
+        warn "Some services may not have started. Running services:"
+        jps | grep -E "(NameNode|DataNode|ResourceManager|NodeManager|JobHistoryServer|SecondaryNameNode)" || echo "No Hadoop services found"
+    fi
 }
 
-# Test Hadoop installation
-test_hadoop_installation() {
-    log "Testing Hadoop installation..."
+# ============================================================================
+# Installation Testing
+# ============================================================================
+test_installation() {
+    step "Testing Hadoop installation..."
     
-    # Test HDFS
-    info "Testing HDFS..."
+    local tests_passed=0
+    local total_tests=5
+    
+    # Test 1: Check if services are running
+    info "Test 1: Checking Hadoop services..."
+    local running_services=$(jps | grep -E "(NameNode|DataNode|ResourceManager|NodeManager)" | wc -l)
+    if [[ $running_services -ge 4 ]]; then
+        echo "  ✅ Hadoop services are running"
+        ((tests_passed++))
+    else
+        echo "  ❌ Not all Hadoop services are running"
+    fi
+    
+    # Test 2: Test HDFS
+    info "Test 2: Testing HDFS..."
     if hdfs dfs -ls / >/dev/null 2>&1; then
-        log "HDFS is working ✓"
-        
-        # Test basic HDFS operations
-        info "Testing HDFS operations..."
-        hdfs dfs -mkdir -p /user/$(whoami) 2>/dev/null || true
+        echo "  ✅ HDFS is accessible"
+        ((tests_passed++))
+    else
+        echo "  ❌ HDFS is not accessible"
+    fi
+    
+    # Test 3: Test HDFS operations
+    info "Test 3: Testing HDFS file operations..."
+    if hdfs dfs -mkdir -p /user/$(whoami) >/dev/null 2>&1; then
         echo "test" > /tmp/hadoop_test.txt
-        if hdfs dfs -put /tmp/hadoop_test.txt /user/$(whoami)/ 2>/dev/null; then
-            log "HDFS file operations working ✓"
-            hdfs dfs -rm /user/$(whoami)/hadoop_test.txt >/dev/null 2>&1 || true
+        if hdfs dfs -put /tmp/hadoop_test.txt /user/$(whoami)/ >/dev/null 2>&1; then
+            if hdfs dfs -cat /user/$(whoami)/hadoop_test.txt >/dev/null 2>&1; then
+                echo "  ✅ HDFS file operations working"
+                ((tests_passed++))
+                hdfs dfs -rm /user/$(whoami)/hadoop_test.txt >/dev/null 2>&1 || true
+            else
+                echo "  ❌ HDFS file read failed"
+            fi
         else
-            warning "HDFS file operations failed"
+            echo "  ❌ HDFS file upload failed"
         fi
         rm -f /tmp/hadoop_test.txt
     else
-        warning "HDFS is not responding properly"
+        echo "  ❌ HDFS directory creation failed"
     fi
     
-    # Test YARN
-    info "Testing YARN..."
+    # Test 4: Test YARN
+    info "Test 4: Testing YARN..."
     if yarn node -list >/dev/null 2>&1; then
-        log "YARN is working ✓"
+        echo "  ✅ YARN is working"
+        ((tests_passed++))
     else
-        warning "YARN is not responding properly"
+        echo "  ❌ YARN is not working"
     fi
     
-    return 0
-}
-
-# Final setup and testing
-final_setup() {
-    log "Performing final setup..."
+    # Test 5: Test Web UIs
+    info "Test 5: Testing Web UI accessibility..."
+    local web_uis_accessible=0
     
-    # Check if we should skip service startup
-    if [ "$SKIP_SERVICE_START" = "true" ]; then
-        info "Skipping service startup (SKIP_SERVICE_START=true)"
-        log "Component installation completed ✓"
-        return
+    # Check NameNode UI
+    if curl -s -o /dev/null -w "%{http_code}" "http://localhost:9870" | grep -q "200"; then
+        ((web_uis_accessible++))
     fi
     
-    # Load environment variables for this session
-    info "Loading Hadoop environment variables..."
-    if [ -f ~/.bashrc ]; then
-        # Source the Hadoop environment variables for this session
-        eval "$(grep -E '^export (JAVA_HOME|HADOOP_|YARN_)' ~/.bashrc | tail -20)"
-        info "Environment variables loaded for installation session"
+    # Check ResourceManager UI
+    if curl -s -o /dev/null -w "%{http_code}" "http://localhost:8088" | grep -q "200"; then
+        ((web_uis_accessible++))
     fi
     
-    # Verify environment is set
-    if [ -z "$HADOOP_HOME" ]; then
-        warning "HADOOP_HOME not set, setting manually for installation"
-        export HADOOP_HOME="/opt/hadoop"
-        export HADOOP_CONF_DIR="$HADOOP_HOME/etc/hadoop"
-        export HADOOP_COMMON_HOME="$HADOOP_HOME"
-        export HADOOP_HDFS_HOME="$HADOOP_HOME"
-        export HADOOP_MAPRED_HOME="$HADOOP_HOME"
-        export YARN_HOME="$HADOOP_HOME"
-        export PATH="$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin"
-    fi
-    
-    # Start services using integrated function
-    info "Starting Hadoop services..."
-    if start_hadoop_services; then
-        info "Hadoop services started successfully"
+    if [[ $web_uis_accessible -ge 2 ]]; then
+        echo "  ✅ Web UIs are accessible"
+        ((tests_passed++))
     else
-        warning "Some services may have failed to start"
-        info "You can start them manually by running: source ~/.bashrc && ./install.sh --start-services"
+        echo "  ❌ Web UIs are not fully accessible"
     fi
     
-    # Wait for services to initialize
-    info "Waiting for services to initialize..."
-    sleep 10
-    
-    # Run basic tests using integrated function
-    info "Running installation tests..."
-    if test_hadoop_installation; then
-        log "Installation tests completed successfully! ✓"
+    # Summary
+    echo
+    if [[ $tests_passed -eq $total_tests ]]; then
+        success "All tests passed! Hadoop installation is fully functional."
+        return 0
     else
-        warning "Some tests failed, but installation is mostly complete"
-        info "You can verify installation manually by running: source ~/.bashrc && jps"
+        warn "Tests passed: $tests_passed/$total_tests"
+        warn "Some functionality may not be working correctly."
+        return 1
     fi
 }
 
-# Display final information
-display_info() {
+# ============================================================================
+# Information Display
+# ============================================================================
+show_completion_info() {
     echo
-    echo -e "${GREEN}===========================================${NC}"
-    echo -e "${GREEN}   Hadoop 3.4.1 Installation Complete!   ${NC}"
-    echo -e "${GREEN}===========================================${NC}"
+    echo -e "${CYAN}=============================================================================="
+    echo -e "🎉                     INSTALLATION COMPLETED!                           🎉"
+    echo -e "==============================================================================${NC}"
     echo
-    echo -e "${BLUE}Web UIs:${NC}"
-    echo -e "  NameNode:        http://localhost:9870"
-    echo -e "  ResourceManager: http://localhost:8088" 
-    echo -e "  JobHistory:      http://localhost:19888"
-    echo -e "  DataNode:        http://localhost:9864"
+    echo -e "${WHITE}📊 Web Interfaces:${NC}"
+    echo -e "   🗄️  NameNode UI:      ${YELLOW}http://localhost:9870${NC}"
+    echo -e "   ⚡ ResourceManager:   ${YELLOW}http://localhost:8088${NC}"
+    echo -e "   📈 JobHistory:        ${YELLOW}http://localhost:19888${NC}"
+    echo -e "   💾 DataNode UI:       ${YELLOW}http://localhost:9864${NC}"
+    echo -e "   🔧 NodeManager UI:    ${YELLOW}http://localhost:8042${NC}"
     echo
-    echo -e "${BLUE}Useful Commands:${NC}"
-    echo -e "  Start services:  ./install.sh --start-services"
-    echo -e "  Stop services:   $HADOOP_HOME/sbin/stop-all.sh"
-    echo -e "  Check services:  jps"
+    echo -e "${WHITE}🚀 Quick Commands:${NC}"
+    echo -e "   Start services:       ${GREEN}hstart${NC}"
+    echo -e "   Stop services:        ${RED}hstop${NC}"
+    echo -e "   Check services:       ${BLUE}hstatus${NC}"
+    echo -e "   Format HDFS:          ${YELLOW}hdfs-format${NC}"
     echo
-    echo -e "${BLUE}HDFS Commands:${NC}"
-    echo -e "  hdfs dfs -ls /"
-    echo -e "  hdfs dfs -mkdir /user"
-    echo -e "  hdfs dfs -put localfile /user/"
+    echo -e "${WHITE}📂 Common HDFS Commands:${NC}"
+    echo -e "   List root directory:  ${CYAN}hdfs dfs -ls /${NC}"
+    echo -e "   Create directory:     ${CYAN}hdfs dfs -mkdir /test${NC}"
+    echo -e "   Upload file:          ${CYAN}hdfs dfs -put file.txt /test/${NC}"
+    echo -e "   Download file:        ${CYAN}hdfs dfs -get /test/file.txt${NC}"
     echo
-    echo -e "${GREEN}Next Steps:${NC}"
-    echo -e "  1. Load environment: ${YELLOW}source ~/.bashrc${NC}"
-    echo -e "  2. Verify services:  ${YELLOW}jps${NC}"
-    echo -e "  3. Start services:   ${YELLOW}./install.sh --start-services${NC} (if not started)"
-    echo -e "  4. Test HDFS:        ${YELLOW}hdfs dfs -ls /${NC}"
+    echo -e "${WHITE}🔧 Next Steps:${NC}"
+    echo -e "   1. Load environment:  ${YELLOW}source ~/.bashrc${NC}"
+    echo -e "   2. Verify services:   ${YELLOW}jps${NC}"
+    echo -e "   3. Access Web UIs:    ${YELLOW}Open browser and visit URLs above${NC}"
+    echo -e "   4. Test HDFS:         ${YELLOW}hdfs dfs -ls /${NC}"
     echo
-    echo -e "${YELLOW}Note: If services didn't start automatically, run the commands above in order${NC}"
+    echo -e "${GREEN}✨ Installation completed successfully! Happy data processing! ✨${NC}"
     echo
 }
 
-# Main installation process
+# ============================================================================
+# Main Installation Function
+# ============================================================================
 main() {
-    log "Starting Hadoop 3.4.1 installation for WSL..."
+    # Check if specific operations are requested
+    case "${1:-}" in
+        "--start"|"start")
+            info "Starting Hadoop services..."
+            source ~/.bashrc 2>/dev/null || true
+            export HADOOP_HOME=${HADOOP_HOME}
+            export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
+            start_services
+            exit 0
+            ;;
+        "--test"|"test")
+            info "Testing Hadoop installation..."
+            source ~/.bashrc 2>/dev/null || true
+            export HADOOP_HOME=${HADOOP_HOME}
+            export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
+            test_installation
+            exit $?
+            ;;
+        "--help"|"-h"|"help")
+            echo "Hadoop WSL Installer"
+            echo
+            echo "Usage: $0 [OPTION]"
+            echo
+            echo "Options:"
+            echo "  (no args)     Run complete installation"
+            echo "  start         Start Hadoop services"
+            echo "  test          Test installation"
+            echo "  help          Show this help"
+            echo
+            exit 0
+            ;;
+    esac
     
-    check_wsl
-    fix_hadoop_line_endings  # Fix line endings early to ensure all scripts work
+    # Run complete installation
+    show_header
+    
+    echo -e "${WHITE}Starting Hadoop 3.4.1 installation for WSL...${NC}"
+    echo
+    
+    # Installation steps
+    check_system
     update_system
     setup_java
     setup_ssh
+    download_hadoop
     install_hadoop
     configure_hadoop
     setup_environment
     format_hdfs
-    final_setup
-    display_info
+    start_services
     
-    log "Installation process completed!"
+    echo
+    
+    # Test installation
+    if test_installation; then
+        show_completion_info
+    else
+        warn "Installation completed but some tests failed."
+        warn "Please check the logs above and run: $0 test"
+    fi
+    
+    success "Hadoop WSL Installer completed!"
 }
 
-# Check if script is run directly and handle arguments
-if [ "$0" = "${0#*/}" ]; then
-    case "${1:-}" in
-        "--start-services")
-            log "Starting Hadoop services manually..."
-            # Load environment
-            if [ -f ~/.bashrc ]; then
-                eval "$(grep -E '^export (JAVA_HOME|HADOOP_|YARN_)' ~/.bashrc | tail -20)"
-            fi
-            start_hadoop_services
-            ;;
-        "--test")
-            log "Testing Hadoop installation..."
-            # Load environment
-            if [ -f ~/.bashrc ]; then
-                eval "$(grep -E '^export (JAVA_HOME|HADOOP_|YARN_)' ~/.bashrc | tail -20)"
-            fi
-            test_hadoop_installation
-            ;;
-        "--help"|"-h")
-            echo "Usage: $0 [OPTION]"
-            echo "Install and configure Hadoop 3.4.1 on WSL"
-            echo ""
-            echo "Options:"
-            echo "  (no args)           Run full installation"
-            echo "  --start-services    Start Hadoop services only"
-            echo "  --test             Test existing installation"
-            echo "  --help, -h         Show this help message"
-            echo ""
-            exit 0
-            ;;
-        "")
-            main "$@"
-            ;;
-        *)
-            echo "Unknown option: $1"
-            echo "Use --help for usage information"
-            exit 1
-            ;;
-    esac
+# ============================================================================
+# Script Entry Point
+# ============================================================================
+if [[ "${BASH_SOURCE[0]}" == "${0}" ]]; then
+    main "$@"
 fi
